# fastapi-template

./: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
app/: config.py  main.py
app/api/: routers.py
app/db/: postgres.py
app/kafka/: consumer.py  producer.py
app/models/: event.py
app/schemas/: event.py
