[project]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Олег",email = "oleg.ablov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "kafka (>=1.3.5,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"